# neo-wallet

./: README.md
bundler/: Dockerfile  README.md  package.json
bundler/src/: app.module.ts
bundler/src/config/: config.interface.ts  configuration.ts
bundler/src/gas-price/: gas-price.controller.spec.ts  gas-price.controller.ts  gas-price.module.ts  gas-price.service.spec.ts  gas-price.service.ts
bundler/src/relayer/: relayer.controller.spec.ts  relayer.controller.ts  relayer.module.ts  relayer.service.ts
client/: index.html  package.json  vite.config.ts
client/public/: manifest.json
client/src/: App.tsx  index.tsx
client/src/components/: Footer.tsx  Intent.tsx  Navbar.tsx  Passkey.tsx
client/src/components/Home/: Feat.tsx  Hero.tsx  HomeNav.tsx  Team.tsx
client/src/components/UI/: ErrorBox.tsx  ResultModal.tsx
client/src/pages/: Home.tsx  Intent.tsx  Passkeys.tsx
client/src/util/: index.ts
contract/: .gitignore  Makefile  go.mod  go.sum
contract/compiled/: contract.nef
contract/entrypoint/: Makefile  main.go  main.nef  main.yml
contract/limit/: main.go  main.nef  neo-go.yml
contract/swap/: main.go  main.nef  neo-go.yml
docs/: README.md
solver-llm-api/: Cargo.toml  README.md
solver-llm-api/src/: lib.rs  main.rs
