[package]
name = "gpt_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = "0.4.10"
llm-chain = "0.12.0"
llm-chain-openai = "0.12.0"
tokio = { version = "1.32.0", features = ["full"] }
